--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" 
         rel="stylesheet" /> 
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Zomato - Food Delivery</title>
 </head>
 <body>
     <header>
@@ -18,9 +18,140 @@
                 <img src="Assets/logo.png" alt="logo" class="navbar__logo" />
             </div>
             <div class="navbar__nav__items">
-                <button class="nav__item">Order Food</button>
+                <button class="nav__item button__primary">Order Food</button>
             </div>
         </nav>
     </header>
+
+    <main class="container">
+        <!-- Hero Section -->
+        <section class="hero__container">
+            <div class="hero__image__container">
+                <img src="Assets/hero.jpg" alt="hero image" class="hero__image" />
+                <img src="Assets/svg/heroShape.svg" alt="hero image shape" class="hero__image__shape" />
+                <img src="Assets/svg/herobgpattren.svg" alt="hero image shape" class="hero__image__pattren" />
+            </div>
+            </div>
+            <div class="hero__description">
+                <h1 class="hero__description__text">Order food from favourite restaurants near you</h1>
+                <button class="button__primary">Order Now</button>
+            </div>
+        </section>
+
+        <!-- Video Section -->
+        <!-- <section class="video__footage__container">
+            <div class="video__footage__gradient__bg"></div>
+            <div class="video__footage">
+                <iframe title="vimeo-player" src="https://player.vimeo.com/video/323795266" width: 100% height="320" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video__text">Your food will be prepared safely with an experienced chef, without compromising on the quality and hygiene.</div>
+        </section> -->
+
+        <!-- Explore Menu -->
+        <section class="explore__menu__container">
+            <h1 class="explore__menu__text">Explore our menu</h1>
+            <div class="explore__menu__bg__gradient"></div>
+            <div class="explore__menu__lists">
+                <!-- Burger -->
+                <div class="food__card">
+                    <div class="food__image__container">
+                        <img src="Assets/burger.jpg" alt="burger image" class="food__image" />
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Burgers</h3>
+                        <p class="food__description">Burger King, Mcdonalds, Burger Place 
+                            <span style="color: red;">3+</span>
+                        </p>
+                    </div>
+                </div>
+                <!-- Pizza -->
+                <div class="food__card food__card__move__up">
+                    <div class="food__image__container">
+                        <img src="Assets/pizza.jpg" alt="burger image" class="food__image" />
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Pizza</h3>
+                        <p class="food__description">Pizza Hut, Domino's Pizza 
+                            <span style="color: red;">3+</span>
+                        </p>
+                    </div>
+                </div>
+                <!-- Ice cream -->
+                <div class="food__card">
+                    <div class="food__image__container">
+                        <img src="Assets/iceCream.jpg" alt="burger image" class="food__image" />
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Ice Cream</h3>
+                        <p class="food__description">Baskin Robins, Ibaco
+                            <span style="color: red;">3+</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="explore__menu__view__more">
+                <button class="view__more__button">View more</button>
+            </div>
+        </section>
+
+        <!-- Restaurant list -->
+        <section class="restaurant__container">
+            <h1 class="restaurant__text">Order from 100s of restaurants</h1>
+            <div class="restaurant__images__container">
+                <div class="restaurant__images__row__one">
+                    <div class="restaurant__image__1">
+                        <img src="Assets/restaurant1.jpg" alt="restaurant one" class="restaurant__1" />
+                    </div>
+                    <div class="restaurant__image__2">
+                        <img src="Assets/restaurant2.jpg" alt="restaurant two" class="restaurant__2" />
+                    </div>
+                </div>
+                <div class="restaurant__images__row__two">
+                    <div class="restaurant__image__3">
+                        <img src="Assets/restaurant3.jpg" alt="restaurant three" class="restaurant__3" />
+                    </div>
+                    <div class="restaurant__image__4">
+                        <img src="Assets/restaurant4.jpg" alt="restaurant four" class="restaurant__4" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Update Section -->
+        <section class="stay__updated__container">
+            <h1 class="stay__updated__text">Stay Updated</h1>
+            <div class="email__input__container">
+                <div class="email__input__field">
+                    <input class="email__input" type="email" placeholder="email@email.com" />
+                </div>
+                <button class="update__button">Get Updates</button>
+            </div>
+        </section>
+
+        <!-- Quote Section -->
+        <section class="quote__container">
+            <div class="quote__image__container">
+                <img src="Assets/restaurant2.jpg" alt="restaurant background image" class="quote__image" />
+            </div>
+            <div class="quote__image__overlay"></div>
+                <h3 class="quote__text">When a man's stomach is full it makes no difference whether he is rich or poor.</h3>
+        </section>
+    </main>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__brand">
+                <img src="Assets/logo-white.png" alt="logo" class="footer__logo" />
+            </div>
+            <div class="footer__items__container">
+                <div class="footer__items__list">
+                    <h3 class="footer__item">Pricing</h3>
+                    <h3 class="footer__item">Terms and conditions</h3>
+                    <h3 class="footer__item">Partnership</h3>
+                    <h3 class="footer__item">Career</h3>
+                    <h3 class="footer__item">Contact</h3>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
-</html>
+</html>     
