--- a/index.html
+++ b/index.html
@@ -118,15 +118,21 @@
         </section>
 
         <!-- Update Section -->
-        <section class="stay__updated__container">
-            <h1 class="stay__updated__text">Stay Updated</h1>
-            <div class="email__input__container">
-                <div class="email__input__field">
-                    <input class="email__input" type="email" placeholder="email@email.com" />
+        <section class="email__subcribe__container">
+            <div class="subscribe__items">
+              <h1 class="email__text">Stay Updated</h1>
+              <div class="email__subcribe__input__field">
+                <div>
+                  <input
+                    type="email"
+                    placeholder="email@email.com"
+                    class="email__input"
+                  />
                 </div>
-                <button class="update__button">Get Updates</button>
+                <button class="email__button">Get Updates</button>
+              </div>
             </div>
-        </section>
+          </section>
 
         <!-- Quote Section -->
         <section class="quote__container">
